# stat-shiny

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  AI_CONTEXT.md  ARCHITECTURE.md  DEBUGGING_ANALYSIS.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  FIXES_APPLIED.txt  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  PR_SUMMARY.md  README.md  UNICODE_FIX_ANALYSIS.md  app.py  asgi.py  collinearity_check.py  config.py  correlation.py  diag_test.py  docker-compose.yml  forest_plot_lib.py  index.html  interaction_lib.py  logger.py  logic.py  logic_optimized.py  multiple_comparisons.py  poisson_lib.py  psm_lib.py  pyproject.toml  pytest.ini  pytest_output.txt  requirements-causal.txt  requirements-prod.txt  requirements.txt  subgroup_analysis_module.py  (+11 more)
.devcontainer/: devcontainer.json
.kilo/: KILO.md
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DEEP-OPTIMIZATION-PLAN.md  Deep AI bot Optimization.md  Deep AI bot Optimozation.md  IMPLEMENTATION_ROADMAP.md  OPTIMIZATION_REPORT.md  UI_IMPROVEMENT_COMPLETE_10FILES.md  UX_UI_audit_report.md  deep-ai-bot-optimization.md  rabbitai-report.md  statiomed-detailed-roadmap.md  statiomed-optimization-report.md  updated-R-benchmark-script.md
md/: 20.1.26_stat-shiny-analysis  20.1.26_stat-shiny-analysis v2  260110 Multiple Comparison Corrections.md  260110executive-summary.md  260110implementation-guide.md  260110stat-shiny-review.md  CACHE_INTEGRATION_GUIDE.md  CHANGELOG_UI_ENHANCEMENT.md  DEBUGGING_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  FIX_COMPLETE.md  HF_OPTIMIZATION_README.md  MIGRATION_NOTES.md  OPTIMIZATION.md  (+21 more)
(+186 files in other folders)
