# Medical Statistical Tool (stat-shiny)
# IMPORTANT: Requires Python 3.12+ for modern f-string syntax

[project]
name = "stat-shiny"
requires-python = ">=3.12"
description = "Medical statistical analysis web app built with Shiny for Python"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"